# autoresearch-pinns

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
artifacts/2026-03-23-large-run/: autoresearch_loop_tikz.tex  results.tsv  summary.json
artifacts/2026-03-24-symmetry-run/: progress_summary.json  results_symmetry.tsv  structure_change_summary.md  summary.json  symmetry_note.tex
scripts/: make_large_run_figures.py  make_symmetry_followup_artifacts.py
