[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous JAX surrogate autoresearch for Burgers operators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax==0.9.2",
    "jaxlib==0.9.2",
    "jax-cuda13-pjrt==0.9.2; sys_platform == 'linux'",
    "jax-cuda13-plugin[with-cuda]==0.9.2; sys_platform == 'linux'",
    "numpy>=2.2.6",
    "optax>=0.2.5",
    "scipy>=1.13.0",
    "equinox>=0.13.6",
]
